# simple-text

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .gn  BUILD.gn  README.md  TODO.md  USEFUL_LINKS.md  loc  universal_app_build  universal_app_build.sh
app/: AppDelegate.h  AppDelegate.mm  BUILD.gn  action.h  app.cc  app.h  app_action.h  basewin.h  bitmask_enum.h  damn.cc  gui_action.h  key.h  linux_window.cc  linux_window.h  main.cc  main.cpp  main.m  main_app.cc  main_gtk.cc  main_linux.c  main_linux.cc  main_mac.h  main_mac.mm  main_mac2.cc  main_mac2.mm  main_qt.cc  main_win.cc  main_win_basewindow.cc  main_win_clock.cc  menu.h  modifier_key.h  sample.cc  scene.h  types.h  window.cc  window.h
app/cocoa/: BUILD.gn  GLLayer.h  GLLayer.mm  GLView.h  GLView.mm  WindowController.h  WindowController.mm  app.mm  app_controller.h  app_controller.mm  display_gl.h  display_gl.mm  gl_app.h  gl_app.mm  gl_layer.h  gl_layer.mm  gl_view.h  gl_view.mm  gl_window.h  gl_window.mm  impl_cocoa.h  menu.mm  window.mm  window_controller.h  window_controller.mm
app/controller/: WindowController.h  WindowController.m  WindowController.mm
app/gtk/: BUILD.gn  app.cc  impl_gtk.h  main_window.cc  main_window.h  main_window_old.cc  main_window_old.h  menu.cc  pimpl_linux.h  window.cc
app/model/: Atlas.cc  Atlas.h  Atlas.mm  AtlasRenderer.cc  AtlasRenderer.h  AtlasRenderer.mm  BoingRenderer.h  BoingRenderer.m  CursorRenderer.cc  CursorRenderer.h  CursorRenderer.mm  Font.h  Font.mm  GlyphCache.h  GlyphCache.mm  RasterizedGlyph.h  Rasterizer.h  Rasterizer.mm  Renderer.h  Renderer.mm
app/resources/: atlas_frag.glsl  atlas_vert.glsl  color.fsh  color.vsh  cursor_vert.glsl  example.cc  example.js  example.json  lighting.vsh  text_frag.glsl  text_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
app/shaders/: BUILD.gn  ShaderTypes.h  Shaders.metal
app/util/: CGFloatUtil.h  CTFontUtil.h  FileUtil.h  FileUtil.mm  LogUtil.h  LogUtil.mm  OpenGLErrorUtil.h  file_util.h  file_util.m  log_util.h  log_util.mm  shader_util.c  shader_util.h
app/view/: EditorView.h  EditorView.mm  MyNSOpenGLView.h  MyNSOpenGLView.m  OpenGLLayer.h  OpenGLLayer.m  OpenGLLayer.mm
app/win32/: BUILD.gn  app.cc  dummy_context.cc  impl_win.h  main_window.cc  main_window.h  menu.cc  pimpl_win.h  win32_window.cc  win32_window.h  window.cc
base/: BUILD.gn  Buffer.cc  Buffer.h  buffer.cc  buffer.h  check.cc  check.h  compiler_specific.h  fredbuf_buffer.cc  fredbuf_buffer.h  location.cc  location.h  location_unittest.cc  no_destructor.h  no_destructor_unittest.cc  path_service.cc  path_service.h  path_service_linux.cc  path_service_mac.cc  path_service_mac.mm  path_service_win.cc  piece_table.cc  piece_table.h  rand_util.cc  rand_util.h  rand_util_posix.cc  rand_util_unittest.cc  rand_util_win.cc  rgb.h  syntax_highlighter.cc  syntax_highlighter.h  utf8_string.cc  utf8_string.h
base/apple/: BUILD.gn  ca_display_link_mac.h  ca_display_link_mac.mm  cv_display_link_mac.h  cv_display_link_mac.mm  display_link_mac.cc  display_link_mac.h  display_link_mac.mm  foundation_util.h  foundation_util.mm  foundation_util_unittest.mm  owned_nsevent.h  owned_nsevent.mm  scoped_cftyperef.h  scoped_cftyperef_unittest.cc  scoped_cgtyperef.h  scoped_typeref.h  string_conversions.h
base/buffer/: BUILD.gn  buffer.cc  (+14 more)
editor/: BUILD.gn  movement.cc  movement.h  movement_unittest.cc  selection.h
font/: BUILD.gn  Rasterizer.h  Rasterizer.mm  core_text_rasterizer.h  core_text_rasterizer.mm  directwrite_rasterizer.cc  example.c  example.h  font_fallback_renderer.cc  font_fallback_renderer.h  font_rasterizer.cc  font_rasterizer.h  font_rasterizer_core_text.cc  font_rasterizer_directwrite.cc  font_rasterizer_pango.cc  font_rasterizer_perftest.cc  font_rasterizer_unittest.cc  freetype_rasterizer.cc  freetype_rasterizer.h  impl_directwrite.h  pango_rasterizer.cc  rasterized_glyph.h  rasterizer.h  rasterizer.mm  types.cc  types.h  utf16_to_utf8_indices_map.h
gui/: BUILD.gn  action.h  app.h  bitmask_enum.h  container_widget.cc  container_widget.h  dispatch_table_gl.h  functions_gl.h  gui_action.h  horizontal_layout_widget.cc  horizontal_layout_widget.h  key.h  label_widget.cc  label_widget.h  main_widget.cc  main_widget.h  modifier_key.h  padding_widget.cc  padding_widget.h  scrollable_widget.cc  scrollable_widget.h  side_bar_widget.cc  side_bar_widget.h  status_bar_widget.cc  status_bar_widget.h  tab_bar_widget.cc  tab_bar_widget.h  text_view_widget.cc  text_view_widget.h  types.h  vertical_layout_widget.cc  vertical_layout_widget.h  widget.cc  widget.h  window.h
platform/: BUILD.gn  app.cc  app.h  task.cc  task.h  task_internal.h  window.h
renderer/: BUILD.gn  atlas.cc  atlas.h  glyph_cache.cc  glyph_cache.h  image_renderer.cc  image_renderer.h  movement.cc  movement.h  opengl_error_util.h  opengl_functions.h  opengl_types.h  rect_renderer.cc  rect_renderer.h  renderer.cc  renderer.h  renderer_old.cc  renderer_old.h  selection_renderer.cc  selection_renderer.h  shader.cc  shader.h  text_renderer.cc  text_renderer.h  types.h
simple_text/: BUILD.gn  action_executer.h  editor_app.cc  editor_app.h  editor_tab.cc  editor_tab.h  editor_window.cc  editor_window.h  example_dll.cc  example_dll.h  example_lib.cc  example_lib.h  lib.cc  main.cc  main_app.cc  main_linux.cc  main_mac.mm  main_temp.cc  sample_code.txt  simple_text.cc  simple_text.h  testy.cc  testy.h  testy2.c  testy2.h
skia/: BUILD.gn
syntax_highlighter/: BUILD.gn  language.cc  language.h  parse_tree.cc  parse_tree.h  syntax_highlighter.cc  syntax_highlighter.h  types.h
testing/: BUILD.gn  gtest_mac.h  gtest_mac.mm  gtest_mac_unittest.mm  main.cc
ui/: BUILD.gn  app.h  button.h  button.mm  modifier_key.h  paint_context.cc  paint_context.h  root_view_host.cc  root_view_host.h  types.h  view.cc  view.h
unicode/: BUILD.gn  SkTFitsIn.h  fits_in.h  unicode.cc  unicode.h  unicode_unittest.cc  utf16_to_utf8_indices_map.cc  utf16_to_utf8_indices_map.h  utf16_to_utf8_indices_map_unittest.cc  utf8_decoder.h  utf8_decoder_unittest.cc
wasmtime_experiment/: BUILD.gn  wasmtime_experiment.cc
(+879 files in other folders)
