group("all") {
  deps = [ "//simple_text" ]
}

group("tests") {
  testonly = true
  deps = [
    "//testing:perf_tests",
    "//testing:unit_tests",
  ]
}

group("experiments") {
  deps = [
    "//experiments/cpu_renderer",
    "//experiments/fuzz",
    "//experiments/gui_api_redesign",
    "//experiments/message_loop",
    "//experiments/playground",
    "//experiments/rasterizer",
    "//experiments/renderer",
  ]

  if (is_mac) {
    deps += [ "//experiments/mac_startup_benchmark" ]
  }
}
