group("all") {
  deps = [ "//simple_text" ]
}

group("tests") {
  testonly = true
  deps = [
    "//testing:perf_tests",
    "//testing:unit_tests",
  ]
}

group("experiments") {
  deps = [
    "//experiments/fuzz",
    "//experiments/parser",
    "//experiments/playground",
  ]

  if (is_mac) {
    deps += [
      "//experiments/cpu_renderer",
      "//experiments/gui_api_redesign",
      "//experiments/mac_startup_benchmark",
      "//experiments/message_loop",
      "//experiments/rasterizer",
      "//experiments/renderer",
    ]
  }
}
