group("all") {
  deps = [ "//simple_text" ]
}

group("tests") {
  testonly = true
  deps = [
    "//testing:perf_tests",
    "//testing:unit_tests",
  ]
}

group("experiments") {
  deps = [
    "//experiments/fuzz",
    "//experiments/networking",
    "//experiments/parser",
    "//experiments/playground",
  ]

  if (is_mac) {
    deps += [
      "//experiments/app_api_redesign",
      "//experiments/coroutines",
      "//experiments/cpu_renderer",
      "//experiments/gui_api_redesign",
      "//experiments/mac_startup_benchmark",
      "//experiments/rasterizer",
      "//experiments/renderer",
    ]
  }
}
