import("//build/config/mac/icon.gni")
import("//build/config/mac/mac_app_bundle.gni")

if (is_mac) {
  mac_app_bundle("app") {
    output_name = "Simple Text"
    bundle_identifier = "com.jason5122.simple-text"
    info_plist = "resources/Info.plist"

    # define `code_signing_identity` in args.gn

    sources = [
      "main.cc",
      "main_app.cc",
    ]

    frameworks = [ "Cocoa.framework" ]

    deps = [ "//ui/app" ]
  }
}
