source_set("editor") {
  sources = [
    "buffer/piece_tree.cc",
    "buffer/piece_tree_rbtree.cc",
    "movement.cc",
    "search/ac_fast.cc",
    "search/ac_slow.cc",
    "search/aho_corasick.cc",
  ]

  deps = [
    "//third_party/spdlog",
    "//third_party/uni_algo",
  ]
}

source_set("editor_unittests") {
  testonly = true

  sources = [
    "buffer/piece_tree_unittest.cc",
    "buffer/tree_walker_unittest.cc",
    "movement_unittest.cc",
    "search/aho_corasick_unittest.cc",
  ]

  deps = [
    ":editor",
    "//third_party/googletest:gtest",
    "//third_party/spdlog",
  ]
}

source_set("editor_perftests") {
  testonly = true

  sources = [
    "buffer/piece_tree_perftest.cc",
    "search/aho_corasick_perftest.cc",
  ]

  deps = [
    ":editor",
    "//third_party/googletest:gtest",
  ]
}
