import("//build/config/linux/pkg_config.gni")

source_set("font") {
  sources = []

  if (is_mac) {
    sources += [ "core_text_rasterizer.mm" ]
  }

  if (is_linux) {
    sources += [ "pango_rasterizer.cc" ]

    public_configs = [ ":linux_font_libs" ]
  }

  if (is_win) {
    sources += [ "directwrite_rasterizer.cc" ]

    libs = [
      "Ole32.lib",
      "D2d1.lib",
    ]
  }
}

if (is_linux) {
  pkg_config("linux_font_libs") {
    packages = [
      "freetype2",
      "pango",
      "pangocairo",
    ]
  }
}
