source_set("gui") {
  sources = [
    "widget/container_widget.cc",
    "widget/editor_widget.cc",
    "widget/horizontal_layout_widget.cc",
    "widget/label_widget.cc",
    "widget/multi_view_widget.cc",
    "widget/padding_widget.cc",
    "widget/scrollable_widget.cc",
    "widget/side_bar_widget.cc",
    "widget/status_bar_widget.cc",
    "widget/tab_bar_widget.cc",
    "widget/text_view_widget.cc",
    "widget/vertical_layout_widget.cc",
    "widget/widget.cc",
  ]

  deps = [
    "//base",
    "//gui/renderer",
  ]
}
