source_set("gui") {
  sources = [
    "renderer/atlas.cc",
    "renderer/debug/renderer_lite.cc",
    "renderer/line_layout_cache.cc",
    "renderer/rect_renderer.cc",
    "renderer/renderer.cc",
    "renderer/selection_renderer.cc",
    "renderer/shader.cc",
    "renderer/texture_cache.cc",
    "renderer/texture_renderer.cc",
    "widget/button_widget.cc",
    "widget/container/horizontal_layout_widget.cc",
    "widget/container/horizontal_resizing_widget.cc",
    "widget/container/layout_widget.cc",
    "widget/container/vertical_layout_widget.cc",
    "widget/container/vertical_resizing_widget.cc",
    "widget/debug/atlas_widget.cc",
    "widget/debug/solid_color_widget.cc",
    "widget/editor_widget.cc",
    "widget/find_panel_widget.cc",
    "widget/image_button_widget.cc",
    "widget/label_widget.cc",
    "widget/padding_widget.cc",
    "widget/scrollable_widget.cc",
    "widget/side_bar_widget.cc",
    "widget/status_bar_widget.cc",
    "widget/tab_bar_label_widget.cc",
    "widget/tab_bar_widget.cc",
    "widget/text_button_widget.cc",
    "widget/text_edit_widget.cc",
    "widget/text_input_widget.cc",
  ]

  deps = [
    "//base",
    "//editor",
    "//font",
    "//gl",
    "//gui/renderer/icons",
    "//third_party/libjpeg",
    "//third_party/libspng",
    "//third_party/spdlog",

    # TODO: Refactor this.
    "//gui/platform",
  ]
}
