source_set("renderer") {
  sources = [
    "atlas.cc",
    "rect_renderer.cc",
    "renderer.cc",
    "shader.cc",
    "text/glyph_cache.cc",

    # "image_renderer.cc",
    # "movement.cc",
    # "selection_renderer.cc",
    # "text/text_renderer.cc",
  ]

  deps = [
    # "icons",
    # "//base",
    # "//base/filesystem",
    # "//config",
    "//font",
    # "//third_party/libgrapheme",
    # "//third_party/libpng",
    # "//third_party/uni_algo",
  ]
}
