source_set("renderer") {
  sources = [
    "atlas.cc",
    "movement.cc",
    "rect_renderer.cc",
    "renderer.cc",
    "shader.cc",
    "text/glyph_cache.cc",
    "text/text_renderer.cc",

    # "image_renderer.cc",
    # "selection_renderer.cc",
  ]

  deps = [
    "//base",
    "//font",
    "//third_party/libgrapheme",

    # "icons",
    # "//base/filesystem",
    # "//config",
    # "//third_party/libpng",
    # "//third_party/uni_algo",
  ]
}
