import("//third_party/skia/gn/shared_sources.gni")
import("//third_party/skia/modules/skcms/skcms.gni")

source_set("skia") {
  sources = []
  public = []

  public += skia_core_public
  public += skia_pathops_public
  public += skia_utils_public
  public += skia_effects_public
  public += skia_encode_public

  sources += skia_core_sources
  sources += skia_ports_sources
  sources += skia_sksl_core_sources
  sources += skia_sksl_core_module_sources
  sources += skia_utils_private
  sources += skia_colorfilters_sources
  sources += skia_effects_sources
  sources += skia_effects_imagefilter_sources
  sources += skia_pathops_sources
  sources += skia_encode_srcs

  public += skcms_public_headers
  sources += skcms_public
  sources += skcms_TransformBaseline
  sources += skcms_TransformHsw
  sources += skcms_TransformSkx

  if (is_win) {
    sources += [ "//third_party/skia/src/ports/SkDebug_win.cpp" ]
  } else {
    sources += [ "//third_party/skia/src/ports/SkDebug_stdio.cpp" ]
    sources += [ "//third_party/skia/src/ports/SkOSFile_posix.cpp" ]
    sources += [ "//third_party/skia/src/ports/SkMemory_malloc.cpp" ]
  }

  configs -= [ "//build/config/compiler:simple_text_code" ]
  configs += [ "//build/config/compiler:no_simple_text_code" ]

  if (is_mac) {
    frameworks = [
      "CoreFoundation.framework",
      "CoreGraphics.framework",
      "CoreText.framework",
    ]
  }

  public_configs = [ ":skia_config" ]
}

config("skia_config") {
  include_dirs = [ "//third_party/skia" ]
}
