executable("unittest_runner") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }

  deps = [
    "//base:base_unittests",
    "//font/tests",
    "//gui/text_system/integration_tests",
    "//gui/text_system/tests",
    "//third_party/googletest:gtest",
    "//unicode:unicode_unittests",
  ]
}

executable("perftest_runner") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }

  deps = [
    "//base:base_perftests",
    "//third_party/googletest:gtest",
  ]
}
