executable("unittest_runner") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }

  deps = [
    "//base:base_unittests",
    "//editor:editor_unittests",
    "//font:font_unittests",
    "//third_party/googletest:gtest",
    "//unicode:unicode_unittests",
  ]
}

executable("perftest_runner") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }

  deps = [
    "//base:base_perftests",
    "//font:font_perftests",
    "//third_party/googletest:gtest",
  ]
}
