executable("unit_tests") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }
  if (is_mac) {
    sources += [
      "gtest_mac.mm",
      "gtest_mac_unittest.mm",
    ]
  }

  deps = [
    "//base:base_unittests",
    "//editor:editor_unittests",
    "//font:font_unittests",
    "//third_party/googletest:gtest",
  ]
}

executable("perf_tests") {
  testonly = true

  sources = [ "main.cc" ]

  if (is_win) {
    libs = [ "ole32.lib" ]
  }

  deps = [
    "//base:base_perftests",
    "//editor:editor_perftests",
    "//font:font_perftests",
    "//third_party/googletest:gtest",
  ]
}
