source_set("wasmtime_experiment") {
  sources = [ "wasmtime_experiment.cc" ]

  libs = [ "wasmtime" ]

  # TODO: Support all platforms.
  lib_dirs = [ "/opt/homebrew/lib/" ]
  include_dirs = [ "/opt/homebrew/include/" ]

  deps = [ ":hello_wasm" ]
}

if (is_mac) {
  bundle_data("hello_wasm") {
    sources = [ "hello.wat" ]
    outputs = [ "{{bundle_resources_dir}}/wasm/{{source_file_part}}" ]
  }
}

if (is_linux || is_win) {
  copy("hello_wasm") {
    sources = [ "hello.wat" ]
    outputs = [ "$root_out_dir/wasm/{{source_file_part}}" ]
  }
}
