source_set("cocoa") {
  sources = [
    "app.mm",
    "display_gl.mm",
    "gl_layer.mm",
    "gl_view.mm",
    "menu.mm",
    "window.mm",
    "window_controller.mm",
  ]

  frameworks = [
    "Cocoa.framework",
    "QuartzCore.framework",
    "OpenGL.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]
}
