mac_bin_path = "/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/metal/macos/bin/"

_metal_shaders_air_file = "$root_gen_dir/shaders/shaders.air"

action("angle_metal_shaders_to_air") {
  script = "metal_wrapper.py"

  outputs = [ _metal_shaders_air_file ]

  _metal_shaders_metal_source = "Shaders.metal"
  sources = [ _metal_shaders_metal_source ]

  args = [
    mac_bin_path + "metal",
    "-c",
    rebase_path(_metal_shaders_metal_source, root_build_dir),
    "-o",
    rebase_path(_metal_shaders_air_file, root_build_dir),
  ]

  args += [
    "--std=macos-metal2.1",
    "-mmacosx-version-min=10.14",
  ]
}

_metal_shaders_metallib_file = "$root_gen_dir/shaders/shaders.metallib"

action("metal_shaders_to_metallib") {
  script = "metal_wrapper.py"

  outputs = [ _metal_shaders_metallib_file ]

  sources = [ _metal_shaders_air_file ]

  deps = [ ":angle_metal_shaders_to_air" ]

  args = [
    mac_bin_path + "metallib",
    rebase_path(_metal_shaders_air_file, root_build_dir),
    "-o",
    rebase_path(_metal_shaders_metallib_file, root_build_dir),
  ]
}
