source_set("filesystem") {
  sources = [ "file_reader.cc" ]

  if (is_mac) {
    sources += [
      "file_reader_mac.mm",
      "file_watcher_mac.cc",
    ]
    frameworks = [
      "Cocoa.framework",
      "CoreServices.framework",
    ]
  }

  if (is_linux) {
    sources += [
      "file_reader_linux.cc",
      "file_watcher_linux.cc",
    ]
  }

  if (is_win) {
    sources += [
      "file_reader_win.cc",
      "file_watcher_win.cc",
    ]
    libs = [ "shell32.lib" ]
  }

  deps = [ "//third_party/fmt" ]
}
