tree_sitter_queries = [
  "highlights_c.scm",
  "highlights_cpp.scm",
  "highlights_glsl.scm",
  "highlights_json.scm",
  "highlights_scheme.scm",
]

if (is_mac) {
  bundle_data("queries") {
    sources = tree_sitter_queries
    outputs = [ "{{bundle_resources_dir}}/queries/{{source_file_part}}" ]
  }
}

if (is_linux) {
  copy("queries") {
    sources = tree_sitter_queries
    outputs = [ "$root_out_dir/queries/{{source_file_part}}" ]
  }
}
