source_set("syntax_highlighter") {
  # sources = [ "syntax_highlighter.cc" ]

  # # TODO: Support all platforms.
  # libs = [ "wasmtime" ]
  # lib_dirs = [ "/opt/homebrew/lib/" ]
  # include_dirs = [ "/opt/homebrew/include/" ]

  # deps = [
  #   "queries",
  #   "wasm",
  # ]
  public_deps = [ "//third_party/tree_sitter" ]
}
