executable("tree_sitter_test") {
  sources = [ "tree_sitter_test.cc" ]

  deps = [
    ":copy_test_files",
    "//third_party/tree_sitter",
    "//util",
  ]
}

copy("copy_test_files") {
  sources = [ "//app/resources/sample_files/example.json" ]

  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}
