source_set("tests") {
  testonly = true

  sources = [
    # "tree_sitter_edit_test.cc",
    "fredbuf_test.cc",
    "tree_sitter_parse_test.cc",
  ]

  deps = [
    ":copy_test_files",
    "//base",
    "//third_party/fredbuf",
    "//third_party/googletest:gtest",
    "//third_party/tree_sitter",
    "//util",
  ]
}

copy("copy_test_files") {
  sources = [
    "10mb.json",
    "25mb.json",
    "example.json",
  ]
  outputs = [ "$root_out_dir/test_files/{{source_file_part}}" ]
}
