source_set("tests") {
  testonly = true

  sources = [ "tree_sitter_test.cc" ]

  deps = [
    ":copy_test_files",
    "//base",
    "//base/filesystem",
    "//third_party/googletest:gtest",
    "//third_party/tree_sitter",
  ]
}

copy("copy_test_files") {
  sources = [
    "test_files/10mb.json",
    "test_files/example.json",
    "test_files/main.cc",
  ]
  outputs = [ "$root_out_dir/test_files/{{source_file_part}}" ]
}
