source_set("tests") {
  testonly = true

  sources = [
    "hash_map_test.cc",
    "piece_table_test.cc",

    # "tree_sitter_test.cc",
  ]

  # TODO: Find a way to share deps between //base and //base/tests (do this for other modules too).
  deps = [
    ":copy_test_files",
    "//base",
    "//base/filesystem",
    "//config",
    "//third_party/googletest:gtest",
    "//third_party/tree_sitter",
  ]
}

copy("copy_test_files") {
  sources = [
    "test_files/10mb.json",
    "test_files/example.json",
    "test_files/main.cc",
  ]
  outputs = [ "$root_out_dir/test_files/{{source_file_part}}" ]
}
