import("//build/config/mac/icon.gni")
import("//build/config/mac/mac_app_bundle.gni")

common_sources = [
  "editor_app.cc",
  "editor_window.cc",
  "main.cc",
]

common_deps = [
  "//app",
  "//base/filesystem",
  "//gui",
  "//opengl",
]

if (is_mac) {
  mac_app_bundle("fast_startup") {
    output_name = "Fast Startup"
    bundle_identifier = "com.jason5122.simple-text"
    info_plist = "resources/Info.plist"

    sources = common_sources
    deps = common_deps
  }
}

if (is_linux || is_win) {
  executable("fast_startup") {
    sources = common_sources

    deps = common_deps

    # Required for CoInitializeEx()/CoUninitialize().
    # TODO: Consider moving this to //gui/win32/.
    if (is_win) {
      libs = [ "ole32.lib" ]
    }
  }
}
