import("//build/config/mac/icon.gni")
import("//build/config/mac/mac_app_bundle.gni")

common_sources = [
  "fast_startup_app.cc",
  "fast_startup_window.cc",
  "main.cc",
]

common_deps = [
  "//app",
  "//gui",
  "//opengl",
  "//third_party/fmt",
]

if (is_mac) {
  mac_app_bundle("fast_startup") {
    output_name = "Fast Startup"
    bundle_identifier = "com.jason5122.simple-text"
    info_plist = "resources/Info.plist"

    sources = common_sources
    deps = common_deps
  }
}

if (is_linux || is_win) {
  executable("fast_startup") {
    sources = common_sources

    deps = common_deps

    # Required for CoInitializeEx()/CoUninitialize().
    # TODO: Consider moving this to //gui/win32/.
    if (is_win) {
      libs = [ "ole32.lib" ]
    }
  }
}
