import("//build/config/mac/icon.gni")
import("//build/config/mac/mac_app_bundle.gni")

common_sources = [
  "app.cc",
  "main.cc",
  "window.cc",
]

common_deps = [
  "//base",
  "//gui",
  "//opengl",
  "//third_party/fmt",
]

if (is_mac) {
  mac_app_bundle("fast_startup") {
    output_name = "Fast Startup"
    bundle_identifier = "com.jason5122.simple-text"
    info_plist = "resources/Info.plist"

    sources = common_sources
    deps = common_deps
  }
}

if (is_linux || is_win) {
  executable("simple_text") {
    sources = common_sources
    deps = common_deps

    # Required for CoInitializeEx()/CoUninitialize().
    # TODO: Consider moving this to //gui/win32/.
    if (is_win) {
      libs = [ "ole32.lib" ]
    }
  }
}
