import("//build/config/mac/mac_app_bundle.gni")

mac_app_bundle("gui_api_redesign") {
  output_name = "GUI API Redesign"

  sources = [
    "main.cc",
    "platform/mac/app_mac.mm",
    "platform/mac/gl_view.mm",
    "platform/mac/window_mac.mm",
  ]
  deps = [ "//third_party/fmt" ]

  frameworks = [
    "AppKit.framework",
    "Cocoa.framework",
    "QuartzCore.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]
}
