if (is_mac) {
  import("//build/config/mac/mac_app_bundle.gni")

  mac_app_bundle("gui_api_redesign") {
    output_name = "GUI API Redesign"

    sources = [
      "events/cocoa/cocoa_event_utils.mm",
      "events/cocoa/events_mac.mm",
      "events/event.cc",
      "events/event_handler.cc",
      "events/event_processor.cc",
      "events/event_source.cc",
      "events/event_target.cc",
      "events/event_targeter.cc",
      "events/keycodes/keyboard_code_conversion_mac.mm",
      "main.cc",
      "platform/cocoa/app.mm",
      "platform/cocoa/gl_context.cc",
      "platform/cocoa/gl_pixel_format.cc",
      "platform/cocoa/gl_view.mm",
      "platform/cocoa/window.mm",
      "renderer.cc",
      "views/view.cc",
      "views/widget/root_view.cc",
      "views/widget/widget.cc",
    ]

    deps = [
      "//gl",
      "//third_party/spdlog",
    ]

    frameworks = [
      "Cocoa.framework",
      "OpenGL.framework",
      "QuartzCore.framework",
    ]
    defines = [ "GL_SILENCE_DEPRECATION" ]
  }
}

if (is_win) {
  executable("gui_api_redesign") {
    sources = [
      "main.cc",
      "platform/win32/app.cc",
      "platform/win32/window.cc",
    ]

    deps = [
      "//gl",
      "//third_party/spdlog",
    ]
  }
}
