import("//build/config/mac/mac_app_bundle.gni")

executable("mac_startup_benchmark") {
  sources = [ "main.mm" ]

  frameworks = [
    "Cocoa.framework",
    "QuartzCore.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]
}

executable("coroutine_startup_benchmark") {
  sources = [ "coroutine_startup_benchmark.mm" ]

  frameworks = [
    "Cocoa.framework",
    "QuartzCore.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]

  deps = [ "//third_party/corral" ]
}
