import("//build/config/mac/icon.gni")
import("//build/config/mac/mac_app_bundle.gni")

common_sources = [
  "main.cc",
  "resizable_widget_app.cc",
  "resizable_widget_window.cc",
]

common_deps = [
  "//app",
  "//gui",
  "//opengl",
  "//third_party/fmt",
]

if (is_mac) {
  mac_app_bundle("resizable_widget") {
    output_name = "Resizable Widget"
    bundle_identifier = "com.jason5122.resizable-widget-app"
    info_plist = "resources/Info.plist"

    sources = common_sources
    deps = common_deps
  }
}

if (is_linux || is_win) {
  executable("resizable_widget") {
    sources = common_sources

    deps = common_deps

    # Required for CoInitializeEx()/CoUninitialize().
    # TODO: Consider moving this to //gui/win32/.
    if (is_win) {
      libs = [ "ole32.lib" ]
    }
  }
}
