source_set("cocoa") {
  sources = [
    "OpenGLView.mm",
    "WindowController.mm",
    "app.mm",
    "displaygl.mm",
    "window.mm",
  ]

  frameworks = [
    "Cocoa.framework",
    "QuartzCore.framework",
    "OpenGL.framework",
  ]
  defines = [ "GL_SILENCE_DEPRECATION" ]

  public_deps = [ "//third_party/glad" ]
}
